# wordpress-social

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: continuous-integration.yml  deploy_aws.yml  setup-terraform.yml
app/: config_sample.py  facebook.py  instagram.py  twitter.py  wordpress.py
app/lambda_functions/auth_handler/: app.py
docs/: wordpress-social.excalidraw
sandbox/: aws_profile.ipynb  config_sample.py  dev.to.ipynb  facebook.py  image_overlay.ipynb  instagram.ipynb  linkedin.ipynb  microsoft_to_do_api.json  notion.ipynb  parameter_store.ipynb
sandbox/github/: github.ipynb
sandbox/notion/: notion_api.ipynb
sandbox/social_integration/: facebook-access-token.py  linkedin.ipynb  medium.ipynb
terraform/: main.tf  provider.tf  terraform.tfstate  terraform.tfstate.backup
terraform/auth_handler/: api_gateway.tf  lambda.tf  lamdba_iam.tf
terraform/notion_automator__refresh_my_day/: event_bridge.tf  lambda.tf  lamdba_iam.tf
terraform/parameter_store/: linkedin.tf  meta.tf  notion.tf  parameter_store_variables.tf  twitter.tf  variables.tf
terraform/social_integration__facebook/: lambda.tf  lamdba_iam.tf  sqs.tf  variables.tf
terraform/social_integration__instagram/: lambda.tf  lamdba_iam.tf  sqs.tf
terraform/social_integration__linkedin/: lambda.tf  lambda_layer.tf  lamdba_iam.tf  sqs.tf
terraform/social_integration__twitter/: lambda.tf  lamdba_iam.tf  sqs.tf  variables.tf
terraform/wordpress_social_lambda_layer/: lambda_layer.tf
tests/: test_linkedin.py
tests/linkedin/: test_linkedin.py
util/: file_workflow.py
(+60 files in other folders)
