[tool.poetry]
name = "wordpress-social"
version = "0.1.0"
description = "Poetry configuration for WordpressSocial."
authors = ["Aveek <aveeek.d22@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"
boto3 = "^1.21.20"
tweepy = "^4.7.0"
Markdown = "^3.3.6"

[tool.poetry.dev-dependencies]
pytest = "^7.1.0"
ipykernel = "^6.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
